SLCORE-2508 NPE when parsing malformed shared Connected Mode config (#2186)